@@ -87,6 +87,9 @@ Release 2.7.1 - UNRELEASED
 
     YARN-4354. Public resource localization fails with NPE. (Jason Lowe via 
     junping_du)
+    
+    YARN-3602. TestResourceLocalizationService.testPublicResourceInitializesLocalDir
+    fails Intermittently due to IOException from cleanup. (zhihai xu via xgong)
 
     YARN-3878. AsyncDispatcher can hang while stopping if it is configured for
     draining events on stop. (Varun Saxena via jianhe)
